# conduit

./: .gitignore  AUTHORS  ChangeLog  ChangeLog-20090720  Conduit.mdp  Conduit.mds  MAINTAINERS  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  check-doc.sh  conduit.desktop  conduit.doap  configure.ac  doap.rdf.in  fix-firefox.sh  make-deb.sh  make-doc.sh  notes.txt  run-uninstalled.sh  setup-env.sh  upload-doc.sh
conduit/: Canvas.py  ChangeLog  Conduit.py  ConduitDefs.py  ConduitEditorCanvas.py  Configurator.py  Conflict.py  DB.py  DBus.py  DataProvider.py  DataProviderView.py  DataType.py  Database.py  DeltaProvider.py  Exceptions.py  Filter.py  Globals.py  GtkUI.py  Hal.py  Knowledge.py  Logging.py  Main.py  MainWindow.py  Makefile.am  Manager.py  MappingDB.py  Module.py  ModuleCache.py  ModuleManager.py  ModuleWrapper.py  MyBox.py  Network.py  Settings.py  SyncManager.py  SyncSet.py  Synchronization.py  Tree.py  TypeConverter.py  Utils.py  Vfs.py  (+14 more)
conduit-glib/: ChangeLog  Makefile.am  Makefile.decl  autogen.sh  conduit-glib.pc.in  configure.ac
conduit-glib/conduit-glib/: Makefile.am  conduit-g-application.c  conduit-g-application.h  conduit-g-conduit.c  conduit-g-conduit.h  conduit-g-dataprovider.c  conduit-g-dataprovider.h  conduit-g-syncset.c  conduit-g-syncset.h  conduit-glib-globals.h  conduit-glib.h  conduit-marshal.list
conduit-glib/data/: Makefile.am  application.xml  conduit.xml  dataprovider.xml  generate-instrospection-xml.py  syncset.xml
conduit-glib/docs/reference/: Makefile.am  conduit-glib-docs.sgml  conduit-glib-sections.txt  conduit-glib.types
conduit-glib/po/: ChangeLog  POTFILES.in
conduit-glib/test/: Makefile.am  test-application.c
conduit-sharp/src/: Application.cs  AssemblyInfo.cs.in  Conduit.cs  DataProvider.cs  Delegates.cs  Exporter.cs  Makefile.am  SyncSet.cs  Util.cs  conduit-sharp.snk  src.mdp
conduit-sharp/test/: Makefile.am  test-application.cs  test-conduit.cs  test.mdp
conduit/attic/: CanvasClock.cs  Utils.py  dnd.py  filelisting-gtm.py  namespace.py
conduit/data/: conduit.glade
conduit/dataproviders/: AutoSync.py  BackpackModule.py  ContactConverterModule.py  ConverterModule.py  DataProvider.py  DataProviderCategory.py  Evolution.py  EvolutionModule.py  FeedModule.py  File.py  FileModule.py  FlickrModule.py  FspotModule.py  Gmail.py  GmailModule.py  HalFactory.py  Image.py  LifereaModule.py  Makefile.am  MediaPlayerFactory.py  NetworkModule.py  NotesModule.py  Opensync.py  OpensyncModule.py  PhotoConverterModule.py  RemovableDevices.py  RemovableDevicesModule.py  SimpleConfigurator.py  SimpleFactory.py  StickyNotes.py  StickyNotesModule.py  SynceModule.py  TestModule.py  TextConverterModule.py  TomboyModule.py  VolumeFactory.py  __init__.py  iPodModule.py
conduit/dataproviders/BackpackModule/: BackpackModule.py  Makefile.am  config.glade
conduit/dataproviders/BoxDotNetModule/: BoxDotNetModule.py  Makefile.am  config.glade
conduit/dataproviders/EvolutionModule/: EvolutionModule.py  Makefile.am  config.glade
conduit/dataproviders/FacebookModule/: FacebookModule.py  Makefile.am
conduit/dataproviders/FeedModule/: FeedModule.py  Makefile.am  config.glade
conduit/dataproviders/FileModule/: FileModule.py  Makefile.am  config.glade
conduit/dataproviders/FlickrModule/: FlickrModule.py  Makefile.am  config.glade
conduit/dataproviders/FspotModule/: FspotModule.py  (+3 more)
conduit/datasources/: FileSource.py
conduit/datatypes/: Audio.py  Bookmark.py  CalDataType.py  Contact.py  DataType.py  Email.py  Event.py  Feed.py  File.py  FileDataType.py  Makefile.am  Music.py  Note.py  Photo.py  Setting.py  Text.py  Video.py  __init__.py
conduit/evolution/: Makefile.am  __init__.py  _evolution.defs  _evolution.override  _evolutionmodule.c  check-libevo.c  evo-addressbook.c  evo-contact.c  evo-environment.c  evo-environment.h  evolution.c  evolution.h  gen-defs.sh
conduit/gtkui/: Canvas.py  ConfigContainer.py  ConfigItems.py  ConfigWidgets.py  ConflictResolver.py  Database.py  EmbedConfigurator.py  Hints.py  Makefile.am  MsgArea.py  SimpleConfigurator.py  Tree.py  UI.py  Util.py  WindowConfigurator.py
conduit/hildonui/: Canvas.py  List.py  Makefile.am  UI.py
conduit/modules/: AudioVideoConverterModule.py  ConverterModule.py  DesktopWallpaperModule.py  FFmpegConverterModule.py  Firefox3Module.py  GoogleBookmarksModule.py  Makefile.am  MencoderConverterModule.py  MusicConverterModule.py  NautilusBookmarksModule.py  OSyncEvoModule.py  OpensyncModule.py  OpensyncXmlModule.py  PhotoConverterModule.py  SynceModule.py  TestModule.py  TomboyModule.py  iPodModule.py
conduit/platform/: FileGio.py  FileGnomeVfs.py  FilePython.py  Makefile.am  SettingsPython.py  WebBrowserMozilla.py  WebBrowserSystem.py  WebBrowserWebkit.py  __init__.py
conduit/utils/: AutostartManager.py  Bluetooth.py  CommandLineConverter.py  GstMetadata.py  Makefile.am  MediaFile.py  Memstats.py  Singleton.py  Thread.py  UDev.py  Wait.py  __init__.py
conduit/vfs/: File.py  Makefile.am  Monitor.py  __init__.py
data/: COPYING  Makefile.am  conduit-autostart.desktop.in.in  conduit.desktop.in.in  conduit.glade  conduit.pc.in  conduit.ui  gui.glade  org.conduit.service.in  org.gnome.Conduit.service.in
help/: ChangeLog  Makefile.am  conduit.omf.in
help/C/: conduit.xml
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/sl/: sl.po
help/sv/: sv.po
help/zh_CN/: zh_CN.po
libevo/: .tm_project2.cache  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  libevo.pc  libevo.pc.in  libtool
libevo/.anjuta/: anjuta.session  default.anjuta  dock-layout.xml
libevo/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
libevo/src/: Makefile  Makefile.am  Makefile.in  evo-addressbook.c  evo-addressbook.h  evo-contact.h  evo-environment.h
libevo/tests/: Makefile  Makefile.am  Makefile.in  check-libevo.c
tools/totem-plugin/: Makefile.am  conduit.py  conduit.totem-plugin  conduit.totem-plugin.in
(+495 files in other folders)
