include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = conduit
DOC_ENTITIES = 
DOC_INCLUDES = 
DOC_LINGUAS = es

DOC_FIGURES = \
    figures/conduit-login.png \
    figures/conduit-gui-parts.png \
    figures/conduit-dp.png \
    figures/conduit-folder-configuration.png \
    figures/conduit-pc1.png \
    figures/conduit-pc2.png \
    figures/conduit-sync-pc1.png \
    figures/conduit-sync-pc2.png
