include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = conduit
DOC_ENTITIES = 
DOC_INCLUDES = 
DOC_LINGUAS = cs de el es fr sl zh_CN

DOC_FIGURES = \
    figures/conduit-login.png \
    figures/conduit-gui-parts.png \
    figures/conduit-dp.png \
    figures/conduit-folder-configuration.png \
    figures/network-pc1.png \
    figures/network-pc2.png \
    figures/network-sync-pc1.png \
    figures/network-sync-pc2.png
